// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TicketSidebar snapshots empty state 1`] = `
"╭──────────────────────────╮    
│                          │    
│ Tickets          + New   │    
│                          │    
│──────────────────────────│    
│                          │    
│ No tickets               │    
│                          │    
│ Jiratown                 │    
╰──────────────────────────╯    
                                
                                
                                
                                
                                
                                
                                
                                
"
`;

exports[`TicketSidebar snapshots with tickets 1`] = `
"╭──────────────────────────╮    
│                          │    
│ Tickets          + New   │    
│                          │    
│──────────────────────────│    
│  ▶ AM-101                │    
│──────────────────────────│    
│  ✓ AM-102                │    
│──────────────────────────│    
│  ! AM-103                │    
│──────────────────────────│    
│ Jiratown                 │    
╰──────────────────────────╯    
                                
                                
                                
                                
                                
"
`;

exports[`TicketPane snapshots default 1`] = `
"                                                                      
 AM-456: Fix login timeout on slow networks                           
 ==========================================                           
                                                                      
 Status ▶ IMPLEMENTING            Agent opencode                      
 Branch   feat/am-456-fix-login                                       
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                 e:escalate   a:switch agent   o:open jira   x:close  
                                                                      
                                                                      
  > Press 'i' to send feedback to agent...                            
                                                                      
                                                                      
"
`;

exports[`Layout snapshots with sidebar and content 1`] = `
"╭──────────────────────────────────────╮Main Content Here                       
│                                      │                                        
│ Tickets                      + New   │                                        
│                                      │                                        
│──────────────────────────────────────│                                        
│                                      │                                        
│ No tickets                           │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│ Jiratown                             │                                        
╰──────────────────────────────────────╯                                        
 No notifications                   webapp | [:] commands | [?] help | [q] quit 
"
`;

exports[`Layout snapshots all-repos mode 1`] = `
"╭──────────────────────────────────────╮main                                    
│                                      │                                        
│ Tickets                      + New   │                                        
│                                      │                                        
│──────────────────────────────────────│                                        
│                                      │                                        
│ No tickets                           │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│                                      │                                        
│ Jiratown                             │                                        
╰──────────────────────────────────────╯                                        
 No notifications                  unknown | [:] commands | [?] help | [q] quit 
"
`;

exports[`Theme consistency TicketSidebar in tokyonight 1`] = `
"╭──────────────────────────╮    
│                          │    
│ Tickets          + New   │    
│                          │    
│──────────────────────────│    
│  ▶ TH-1                  │    
│──────────────────────────│    
│  ✓ TH-2                  │    
│──────────────────────────│    
│ Jiratown                 │    
╰──────────────────────────╯    
                                
                                
                                
                                
                                
"
`;

exports[`Theme consistency TicketSidebar in gruvbox 1`] = `
"╭──────────────────────────╮    
│                          │    
│ Tickets          + New   │    
│                          │    
│──────────────────────────│    
│  ▶ TH-1                  │    
│──────────────────────────│    
│  ✓ TH-2                  │    
│──────────────────────────│    
│ Jiratown                 │    
╰──────────────────────────╯    
                                
                                
                                
                                
                                
"
`;

exports[`Theme consistency TicketSidebar in default 1`] = `
"╭──────────────────────────╮    
│                          │    
│ Tickets          + New   │    
│                          │    
│──────────────────────────│    
│  ▶ TH-1                  │    
│──────────────────────────│    
│  ✓ TH-2                  │    
│──────────────────────────│    
│ Jiratown                 │    
╰──────────────────────────╯    
                                
                                
                                
                                
                                
"
`;
